# pico-lorawan-project

./: .gitignore  README.md
aws-python/client/: ground_station.py  requirements.txt
aws-python/lambda/: lorawan_downlink.py
pico-lorawan/: CMakeLists.txt
pico-lorawan/firmware/: CMakeLists.txt  config.h  main.c
pico-lorawan/firmware/lib/Gas_Sensor/: CMakeLists.txt  Gas_Sensor.c  Gas_Sensor.h
